Update ProjectService
