# src/app/api/project-service/models/find-result-response-project-info.ts
@@ -4,11 +4,11 @@ import { OperationResultStatusType } from './operation-result-status-type';
 import { ProjectInfo } from './project-info';
 export interface FindResultResponseProjectInfo {
 	body?: Array<ProjectInfo>;
-	errors?: Array<string>;
-	status?: OperationResultStatusType;
+	errors: Array<string>;
+	status: OperationResultStatusType;
 
 	/**
 	 * Total number of finded by filter projects.
 	 */
-	totalCount?: number;
+	totalCount: number;
 }
